# eda-lab

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: README.md
.github/workflows/: README.md
data/: README.md
data/nangate45/: README.md
data/synth_cells/: README.md  dff_seq.lef  twobucket.lef
docs/: README.md
docs/briefs/: spike-C1-audit.md  spike-C1-scaffold-degree-fanout.md  spike-C2-kcore.md  spike-C3-ness-neighborhood.md  spike-C4-local-rent.md  spike-C5-congestion-scoring.md  spike-SM1-structural-metrics-cli.md  spike-T0-odb-annotation-timing-dag.md  spike-T1-topo-depth.md  spike-T2-reconvergent.md  spike-T3-hyperanf.md  spike-T4-timing-risk.md  spike-brief-netlistgen-stageA-foundation.md  spike-brief-netlistgen-stageB-lef-statistical-mix.md  spike-brief-netlistgen-stageC-outputs-cli-docs.md  spike-brief-netlistgen-stageD-loop-avoidance.md  spike-brief-netlistgen-stageE-ports-verilog.md  spike-netlistgen-E1-io-rent.md  spike-netlistgen-E2-verilog.md  spike-netlistgen-peak-fanout-clusters.md  spike-netlistgen-wellformed-audit.md
docs/papers/: README.md
etc/: README.md  cred_helper.py  cred_helper_test.py  file_to_string.py  find_messages.py  test_whittle.py  whittle.py
python/: README.md
python/eda-lab/: README.md
run/: README.md
src/: README.md
src/dbio/: README.md  hello_odb.cpp
src/engines/: README.md
src/engines/netlistgen/: FLOW.md  README.md  cli_config.cpp  cli_config.h  netlist_validation.cpp  netlist_validation.h  netlist_writers.cpp  netlist_writers.h  netlistgen.cpp  netlistgen.h  netlistgen_cli.cpp  verilog_out.cpp  verilog_out.h
src/engines/partitioning/: FLOW.md  README.md  fm_partitioner.cpp  fm_partitioner.h  random_hypergraph.cpp  random_hypergraph.h
src/engines/partitioning/docs/: README.md
src/engines/structural_metrics/: FLOW.md  README.md  structural_metrics.cpp  structural_metrics.h  structural_metrics_cli.cpp
src/hg_metrics/: FLOW.md  README.md  congestion_metrics.cpp  congestion_metrics.h  congestion_scoring.cpp  congestion_scoring.h  timing_metrics.cpp  timing_metrics.h
src/hypergraph/: README.md  hypergraph.cpp  hypergraph.h
src/netlistgen/: README.md  netlistgen.cpp
src/support/: README.md  cli.h  logging.h  ord_shim.cpp  status.h
test/: README.md  cli_help_test.cpp  error_handling_test.cpp  fm_partitioner_test.cpp  hg_metrics_congestion_scoring_test.cpp  hg_metrics_congestion_test.cpp  hypergraph_test.cpp  netlistgen_link_smoke.cpp  netlistgen_peak_cluster_test.cpp  netlistgen_rent_test.cpp  netlistgen_stageb_test.cpp  netlistgen_stagec_test.cpp  netlistgen_staged_test.cpp  netlistgen_test.cpp  netlistgen_verilog_test.cpp  netlistgen_wellformed_test.cpp  structural_metrics_test.cpp
